--- a/frontend/src/pages/VetGenelHastaKabul/vetgenelhastakabul.css
+++ b/frontend/src/pages/VetGenelHastaKabul/vetgenelhastakabul.css
@@ -5,16 +5,16 @@
   
   
   .selection-bar-container {
-    width: 50%;
-    padding: 20px;
+    /* width: 50%; */
+    /* padding: 20px; */
     box-sizing: border-box;
   }
   
   
   .vet-genel-hasta-kabul-container {
-    width: 150%;
+    width: 100%;
     padding: 20px;
-    margin-right: 50px; 
+    /* margin-right: 50px;  */
     box-sizing: border-box;
   }
 
