--- a/frontend/src/pages/VetGenelHastaKabul/vetgenelhastakabul.css
+++ b/frontend/src/pages/VetGenelHastaKabul/vetgenelhastakabul.css
@@ -1,13 +1,7 @@
 
 .vet-genel-hasta-kabul-page {
     display: flex;
-  }
-  
-  
-  .selection-bar-container {
-    /* width: 50%; */
-    /* padding: 20px; */
-    box-sizing: border-box;
+    width: 100%;
   }
   
   
@@ -16,6 +10,13 @@
     padding: 20px;
     /* margin-right: 50px;  */
     box-sizing: border-box;
+    background-color: #ffff;
+    border-style: solid;
+    border-color: rgb(202, 190, 190);
+    border-width: 1px;
+    border-radius: 5px;
+
+
   }
 
   .vet-genel-hasta-kabul-container label {
